<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner_difficulte_seance"
    android:layout_width="360dp"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:text="@string/validation_text_quitter_session"
        android:textSize="30dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/viewSeparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/viewSeparator2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/valider_quitter_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/valider_button"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewSeparator1"
        app:layout_constraintLeft_toLeftOf="@id/viewSeparator2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewSeparator1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/annuler_quitter_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/annuler_button"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewSeparator1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/viewSeparator2"
        app:layout_constraintTop_toTopOf="@+id/viewSeparator1"
        tools:layout_editor_absoluteX="7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>